--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
     - 'src/**'
+    - '.github/workflows/**'
   pull_request:
     paths:
     - 'src/**'
+    - '.github/workflows/**'
 
 permissions:
   contents: read
