sudo permissions for actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       run: | 
         git clone https://github.com/wtvemac/rommy.git
         pip install -r rommy/requirements.txt
-        echo '#!/bin/bash
+        sudo echo '#!/bin/bash
         python /home/zefie/rommy/rommy.py "${@}"' > /usr/bin/rommy
     - name: Make AppROM
       run: ./build_zefie_rom.sh
